<resources>
    <string name="evento_image">Evento Image</string>

    <string name="app_name">Evento</string>
    <string name="food">FOOD</string>
    <string name="arrange_your_food_court_for_your_event_faciely_with_evento">Arrange your food court for your event faciely with Evento</string>
    <string name="todo">TODO</string>
    <string name="string_todo" />
    <string name="start">START</string>
    <string name="next">NEXT</string>
    <string name="title_activity_main_home_screen">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Nothing yet</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="evento">Evento</string>
    <string name="email_id">post.mk02@gmail.com</string>
    <string name="edit_profile">Manisha Katiyar</string>
    <string name="name">Manisha Katiyar</string>
    <string name="Profile">Profile</string>
    <string name="nav_bar_name">Hello User!</string>
    <string name="nav_bar_email_id">Update your profile</string>
    <string name="my_services">My Services</string>
    <string name="my_messages">Messages</string>
    <string name="my_orders">My orders</string>
    <string name="content_description_media">Order_pic</string>
    <string name="title">Photography</string>
    <string name="service_description">I am a photographer. I love to shoot everything with my camera, of course! I am a moment capturer.....</string>
    <string name="service_name">"Capturers! "</string>
    <string name="action_message">Message</string>
    <string name="action_unhire">Unhire</string>
    <string name="action_hire">Hire</string>
    <string name="action_view_service_provider_profile">View Profile</string>

    <string name="desc">Launched in Delhi 11 years ago, Zomato has grown from a home project to one of the largest food aggregators in the world. We are present in 24 countries and 10000+ cities globally, enabling our vision of better food for more people. We not only connect people to food in every context but work closely with restaurants to enable a sustainable ecosystem.This will contain all the descriptions of how this small restaurant works and what and all it offers This will contain all the descriptions of how this small restaurant works and what and all it offers This will contain all the descriptions of how this small restaurant works and what and all
     Free First Time Service.\nTime to time display \n \n
    </string>
    <string name="divider_bullet">•</string>

    <string name="value_any_category_food">All Categories</string>
    <string name="value_any_category_drinks">All Categories</string>
    <string name="value_any_category_bakery">All Categories</string>
    <string name="value_any_category_gifts">All Categories</string>
    <string name="value_any_category_decor">All Categories</string>
    <string name="value_any_category_photo">All Categories</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_type">Any Type</string>
    <string name="value_any_experience">Any Experience</string>
    <string name="value_any_capacity">Any Capacity </string>

    <string name="category_food">Food</string>
    <string name="category_drinks">Drinks</string>
    <string name="category_bakery">Bakery </string>
    <string name="category_gifts">Gifts</string>
    <string name="category_decor">Decor</string>
    <string name="category_photo">Photography</string>


    <string name="experience_1">1–6 months</string>
    <string name="experience_2">7–10 months</string>
    <string name="experience_3">1–2 year</string>
    <string name="experience_4">2–3 year</string>
    <string name="experience_5">more than 3 years</string>

    <string name="capacity_1">individual</string>
    <string name="capacity_2">10-30</string>
    <string name="capacity_3">50-100</string>
    <string name="capacity_4">100-500</string>

    <string name="label_category">Category</string>
    <string name="label_city">City</string>
    <string name="label_experience">Experience</string>
    <string name="label_capacity">Capacity</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_services">All Services</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_experience">Sort by Experience</string>
    <string name="sort_by_capacity">Sort by Capacity</string>
    <string name="sort_by_place">Sort by Place</string>

    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_experience">sorted by experience</string>
    <string name="sorted_by_capacity">sorted by capacity</string>
    <string name="sorted_by_place">sorted by place</string>

    <string name="add_random_items">Add Random Items</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_all">Delete All</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="message_not_hired_review"> Hire and Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>
    <string name="hire">Hire</string>
    <string name="rate">RATE</string>

    <string-array name="food_sub_categories">
        <item>@string/value_any_category_food</item>

        <item>Brunch</item>
        <item>Burgers</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Ramen</item>
        <item>Sushi</item>
        <item>French</item>
        <item>American</item>
        <item>Korean</item>
        <item>Junk</item>
        <item>South Indian</item>
    </string-array>
    <string-array name="drinks_sub_categories">
        <item>@string/value_any_category_drinks</item>

        <item>Fruit juices</item>
        <item>Fruit drinks</item>
        <item>Fruit Nectar</item>
        <item>Coffee</item>
        <item>Health Product</item>
        <item>Tea</item>
        <item>Soda</item>
        <item>Soft Drinks</item>
        <item>Tonic water</item>
        <item>Milk</item>
        <item>Ceral-based beverages</item>
    </string-array>

    <string-array name="gifts_sub_categories">
        <item>@string/value_any_category_gifts</item>

        <item>Children</item>
        <item>Stuffed gifts</item>
        <item>Art and Craft</item>
        <item>Jewelry</item>
        <item>Health Product</item>
        <item>Sapling</item>
        <item>Bookey</item>
        <item>Flower pots</item>
        <item>Handmade</item>
        <item>Clothing</item>
        <item>Knitted stuff</item>
    </string-array>

    <string-array name="bakery_sub_categories">
        <item>@string/value_any_category_bakery</item>
        <item>Unsweetened goods</item>
        <item>Sweetened goods</item>
        <item>Filled goods</item>
    </string-array>

    <string-array name="decor_sub_categories">
        <item>@string/value_any_category_decor</item>

        <item>Graffiti</item>
        <item>Botanical</item>
        <item>Florall</item>
        <item>Party</item>
        <item>Diwali</item>
        <item>Holi</item>
    </string-array>

    <string-array name="photography_sub_categories">
        <item>@string/value_any_category_photo</item>

        <item>Wedding</item>
        <item>Pre-Wedding</item>
        <item>Post-Wedding</item>
        <item>Party</item>
        <item>Invocation</item>
        <item>Festival</item>
        <item>Birthday</item>
        <item>Professional Shoot</item>
        <item>Instagram Shoot</item>

    </string-array>

    <!-- 50 most populous cities in the US -->
    <string-array name="cities">
        <item>@string/value_any_city</item>

        <item>Ahemdabad</item>
        <item>Bangalore</item>
        <item>Chennai</item>
        <item>Hydrerabad</item>
        <item>Kolkata</item>
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Surat</item>
        <item>Pune</item>
        <item>Jaipur</item>
        <item>Lucknow</item>
        <item>Kanpur</item>
        <item>Nagpur</item>
        <item>Vishakapatnam</item>
        <item>Indore</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vagas</item>
        <item>Long Beach</item>
        <item>Los Angeles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <!-- Experience filters -->
    <string-array name="experience">
        <item>@string/value_any_experience</item>

        <item>@string/experience_1</item>
        <item>@string/experience_2</item>
        <item>@string/experience_3</item>
        <item>@string/experience_4</item>
        <item>@string/experience_5</item>
    </string-array>
    <!-- Experience filters -->
    <string-array name="capacity">
        <item>@string/value_any_capacity</item>

        <item>@string/capacity_1</item>
        <item>@string/capacity_2</item>
        <item>@string/capacity_3</item>
        <item>@string/capacity_4</item>
    </string-array>


    <!-- Ways you can sort services -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_experience</item>
        <item>@string/sort_by_place</item>
        <item>@string/sort_by_capacity</item>

    </string-array>
</resources>


